// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Editor enhancers CREATE_PERSON_MUTATION has a known shape 1`] = `
"mutation createPersonMutation($name: String, $title: String, $birthDate: Int, $deathDate: Int, $gender: String, $isMonarch: Boolean, $bornToId: ID, $partners: [PartnerInput]) {
  createPerson(name: $name, title: $title, birthDate: $birthDate, deathDate: $deathDate, gender: $gender, isMonarch: $isMonarch, bornToId: $bornToId, partners: $partners) {
    id
    ...personInfo
  }
}

fragment personInfo on Person {
  name
  title
  birthDate
  deathDate
  gender
  isMonarch
  bornToId
  partnerIds
  partners {
    relationId
    partner {
      id
      name
    }
    children {
      name
    }
  }
}
"
`;

exports[`Editor enhancers RELATIONS_QUERY has a known shape 1`] = `
"query relationsQuery {
  relations {
    id
    person1 {
      name
    }
    person2 {
      name
    }
  }
}
"
`;

exports[`Editor enhancers REMOVE_PERSON_MUTATION has a known shape 1`] = `
"mutation removePersonMutation($id: ID!) {
  removePerson(id: $id)
}
"
`;

exports[`Editor enhancers UPDATE_PERSON_MUTATION has a known shape 1`] = `
"mutation updatePersonMutation($id: ID!, $name: String, $title: String, $birthDate: Int, $deathDate: Int, $gender: String, $isMonarch: Boolean, $bornToId: ID, $partners: [PartnerInput]) {
  updatePerson(id: $id, name: $name, title: $title, birthDate: $birthDate, deathDate: $deathDate, gender: $gender, isMonarch: $isMonarch, bornToId: $bornToId, partners: $partners) {
    id
    ...personInfo
  }
}

fragment personInfo on Person {
  name
  title
  birthDate
  deathDate
  gender
  isMonarch
  bornToId
  partnerIds
  partners {
    relationId
    partner {
      id
      name
    }
    children {
      name
    }
  }
}
"
`;
